--- a/2.1
+++ b/2.1
@@ -1,16 +1,19 @@
-﻿#include <iostream>
+#include <iostream>
+#include <math.h>
 using namespace std;
 
 int main()
 {
-    double s = 0, v = 0, p = 0, k = 0;
-    cout << "Введите значение площади крыла самолета S:" << endl;
-    cin >> s;
-    cout << "Введите значение скорости самолета V:" << endl;
+    double v, p, s, c, L;
+    cout << "Input V: \n";
     cin >> v;
-    cout << "Введите значение плотности воздуха p:" << endl;
+    cout << "Input p: \n";
     cin >> p;
-    cout << "Введите значение коэффициента подъемной силы k:" << endl;
-    cin >> k;
-    cout << "Подъемная сила равняется: " << 0.5 * p * pow(v, 2) * s * k;
+    cout << "Input S: \n";
+    cin >> s;
+    cout << "Input CL: \n";
+    cin >> c;
+    L = 0.5 * (p * c * s * pow(v, 2));
+    cout << "L: " <<L <<endl;
+    return 0;
 }
